Re-add right padding to prevent scrollbars in iframe when embedding in evento portal #556

--- a/src/app/shared/styles/container.scss
+++ b/src/app/shared/styles/container.scss
@@ -6,7 +6,7 @@
  */
 .erz-container {
   margin: 0 auto;
-  padding: 0 $erz-container-padding-x;
+  padding: 0 $erz-container-padding-x 0 0;
 }
 
 /**
